[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Dialog/AnswerContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Text Engine.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/TextBox3.png" type="Texture" id=4]
[ext_resource path="res://Art/Outline.png" type="Texture" id=5]
[ext_resource path="res://Dialog/DialogBox.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[node name="DialogBox" type="NinePatchRect"]
show_behind_parent = true
margin_left = 8.0
margin_top = 184.0
margin_right = 469.0
margin_bottom = 287.62
texture = ExtResource( 4 )
script = ExtResource( 6 )

[node name="DialogContainer" type="HSplitContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 96.0

[node name="TextOutput" type="Label" parent="DialogContainer"]
margin_right = 428.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
autowrap = true
max_lines_visible = 4

[node name="AnswerContainer" parent="DialogContainer" instance=ExtResource( 2 )]
margin_left = 440.0
margin_right = 440.0
margin_bottom = 0.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CharacterName" type="Label" parent="."]
margin_left = 8.0
margin_top = -22.0
margin_right = 128.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 1 )

[node name="Interior" type="ColorRect" parent="CharacterName"]
show_behind_parent = true
margin_left = -2.0
margin_top = -1.0
margin_right = 123.0
margin_bottom = 19.0
color = Color( 0.596078, 0.6, 0.607843, 1 )

[node name="Outline2" type="NinePatchRect" parent="CharacterName/Interior"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 126.0
margin_bottom = 21.0
texture = ExtResource( 5 )
